# notify

./: ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  env.example  pyproject.toml
examples/: api_usage.py
scripts/: start.sh
src/notification_service/: __init__.py  main.py
src/notification_service/application/: __init__.py
src/notification_service/application/dto/: __init__.py  notification_request.py  notification_response.py
src/notification_service/application/interfaces/: __init__.py  event_publisher.py  notification_gateway.py
src/notification_service/config/: __init__.py  settings.py
src/notification_service/domain/: __init__.py
src/notification_service/domain/entities/: __init__.py  notification.py
src/notification_service/domain/services/: __init__.py  notification_service.py
src/notification_service/domain/value_objects/: __init__.py  device_token.py  notification_type.py  topic.py
src/notification_service/infrastructure/: __init__.py
src/notification_service/infrastructure/fcm/: __init__.py  fcm_client.py
src/notification_service/infrastructure/valkey/: __init__.py  valkey_client.py
src/notification_service/presentation/: __init__.py
src/notification_service/presentation/api/v1/: __init__.py  health.py  notifications.py
tests/: __init__.py
tests/unit/: __init__.py  test_notification_entity.py
